app/static/styles.css
img { width: 100%; }

html {
    height: 100%;
}

body {
    background-color: white;
    color: #191919;
    font-family: "Public Sans",Arial,sans-serif;
    line-height: 1.25;
    height: 100vh;
    overflow: hidden;
    /* display: flex;
    flex-direction: column; */
}


a {
    color: #f1b300;
}


.btn-primary {
    background-color: #f1b300;
}

.navbar-default {
    background-color: #fff;
    border: 2px solid #F4F4F6;
}

select {
    height: 40px;
}

footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    border-top: 0px solid #fff;
    background-color: #fff;
}

.center-text {
    text-align: center;
}

.btn-primary {
    background-color: #2980b9;
    border-color: #2980b9;
    border-radius: 30px;
}

.btn-secondary {
    background-color: #2980b9;
    border-color: #2980b9;
    border-radius: 30px;
}

.btn-admin-cta {
    width: 50%;
    padding: 60px;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
  }

.btn-frontpage-cta {
    height: 60px;
    margin-top: 60px;
    width: 80%;
    color: black;
    font-weight: 600;
    padding: 10px;
    border-radius: 30px;
    font-size: 3rem;
}

a.btn-frontpage-cta:hover {
    border-color : #f1b300;
    background-color: #f1b300;
    border-width: 2px;
    color: #fff;

}

hr {
    margin-top: 30px;
    margin-bottom: 30px;
    border-top: 1px solid #b2b4ca;
}

.form-field {
    width: 100%;
    font-weight: bold;
    padding: 12px 20px ;
    margin: 15px 0 15px 0;
    border: 1px solid #ccc;
    border-radius: 30px;
    box-sizing: border-box;
}

.card {
    position: relative;
    display: flex;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: #FFF;
    background-clip: border-box;
    border: 1px solid #d9dee355;
    border-radius: 16px;
  }

td {
    padding: 0px 10px 0px 0px;
}

.navbar {
	margin-bottom: 0px;
    padding-left: 30px;
    padding-right: 30px;
}

.navbar-default .navbar-nav>li>a .button-upload {
	color: white;
	line-height: 10px;
	background-color: #337ab7;
	border-color: #2e6da4;
}

.logo {
	width: 50px;
	height: 50px;
	float: left;
	padding: 5px;
}

footer {
	background: #fff;
}

footer .footer-top {
	padding: 60px;
}

footer .footer-bottom {
	background: #fff;
	padding-left: 60px;
	padding-right: 60px;
	padding-top: 20px;
	padding-bottom: 20px;
}

footer .details {
	font-weight: 400;
	font-size: 17px;
	line-height: 1.6;
	color: #faf9f7;
}

footer .footer-html {
	font-weight: 400;
	font-size: 17px;
	line-height: 1.6;
	color: #343434;
	text-align:left;
}


footer .footer-poweredby {
	font-weight: 400;
	font-size: 17px;
	line-height: 1.6;
	color: #343434;
	text-align:right;
}


.nav a {
  text-decoration: none;
  color: #a2aebd;
}

.navbar-default .navbar-brand {
    color: black;
    font-size: 32px;
    margin-top: 15px;
    margin-bottom: 15px;
    margin-left: 10px;
    padding-left: 30px;
}

.hero-content {
    background: #191919;
    padding: 4rem;
    -webkit-box-shadow: -0.7rem 0 0 #f1b300;
    box-shadow: -0.7rem 0 0 #f1b300;
}

.hero-content a.action-button:hover, .hero-content a:focus, .hero-content button:hover, .hero-content button:focus {
    -webkit-box-shadow: none;
    box-shadow: none;
    background: none;
    color: white;
    text-decoration: none;
    border-bottom: 0.1em solid #f1b300;
}

.hero-content a.action-button, .hero-content  button {
    display: inline-block;
    width: 100%;
    color: #191919;
    border: 0.1em solid #f1b300;
    background: #f1b300;
    margin: 1.5rem 0 0;
    padding: .5em 1em .5em;
    font-size: 2rem;
    line-height: 1;
    font-weight: 900;
    text-align: center;
    text-transform: uppercase;
    vertical-align: top;
}

.navbar-brand {
  text-decoration: none;
  font-weight: bold;
  padding-right: 5px;
  color: black;
}

.form-field {
    width: 100%;
    font-weight: bold;
    padding: 12px 20px ;
    margin: 15px 0 15px 0;
    border: 1px solid #ccc;
    border-radius: 30px;
    box-sizing: border-box;
}

.form-block {
    padding-bottom: 15px;
}

.navbar-nav {
    margin-top: 15px;
    margin-bottom: 15px;
}

.navbar-default .navbar-nav > li > a.primary-nav-button {
    margin: 10px;
    padding: 15px 15px 15px 15px;
    
    font-weight: 600;
    height: 30px;
    
    border-color: #fff;
    border-radius: 7px;
    background-color: #F97331;
    color: #fff;
}

.navbar-default .navbar-nav > li > a.primary-nav-button:hover {
    background-color: #c15a26;
}

.btn-frontpage-cta {
    background-color: #F97331;
    border-color : #F97331;
    color: #FFF;
    border-radius: 7px;
    border-color: #fff;
    padding-left: 30px;
    padding-right: 30px;
    font-size: 1.5rem;
}

.btn-frontpage-cta:hover {
    background-color: #F97331;
    border-color : #F97331;
    color: #FFF;
    border-radius: 7px;
    border-color: #fff;
    padding-left: 30px;
    padding-right: 30px;
    font-size: 1.5rem;
}

.btn-cards {
    background-color: white;
    border-color : rgb(207, 207, 207);
    border-radius: 12px;
    color: black;
}

.btn-primary:hover {
    background-color: white;
    border-color : #f1b300;
    color: black;
}

.navbar-default .navbar-nav > li > a.secondary-btn {
    margin: 10px;
    height: 30px;
    font-size: 18px;
    font-weight: 600;
    padding: 5px 15px 5px 15px;
}

tr {
    padding-top: 15px;
}

.previous-response-container {
    padding: 15px;
    border: 1px solid #ccc;
    margin-bottom: 15px;
    border-radius: 5px;
}

.front-page-header {
    padding-bottom: 30px;
   padding-left: 60px;
   padding-right: 60px;
   padding-top: 60px;
}

.frontpage-title {
    font-size: 3.5rem;
    font-weight: bold;
    text-align: left;
    padding-top: 60px;
}

.frontpage-title2 {
    font-size: 6.5rem;
    font-weight: bold;
    text-align: left;
    padding-bottom: 25px;
    color: #94A704;
}

.frontpage-subtitle2 {
    font-size: 16px;
    color:#777;
    padding-bottom: 30px;
}

.frontpage-search-card1 {
    background: #F0F9FC;
}
/* ... */

